sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:8: error: missing argument list for method getCouleur in class DutchFlagEntity
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `getCouleur _` or `getCouleur(_)` instead of `getCouleur`.
    if (getCouleur(i) = BLEU){
        ^DutchFlagAlgo:11: error: missing argument list for method getCouleur in class DutchFlagEntity
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `getCouleur _` or `getCouleur(_)` instead of `getCouleur`.
    } else if (getCouleur(i) = ROUGE){
               ^