sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {
  var apresBleu:Int = 0
  var avantBlanc:Int= getTaille() -1
  var blancRouge:Int  = getTaille() -1
  while (apresBleu <= avantBlanc){
    for (i <- 0 to getTaille())
    if (getCouleur(i) = BLEU){
      echange(i, apresBleu)
      apresBleu = apresBleu +1
    } else if (getCouleur(i) = ROUGE){
      echange(i, blancRouge)
      blancRouge = blancRouge -1
      avantBlanc = avantBlanc -1
    } else{
      echange(i, avantBlanc)
      avantBlanc = avantBlanc -1
    }
  }
}